<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuAppInfo"
        android:icon="@drawable/ic_app_system"
        android:title="@string/menu_app_info" />

    <item
        android:id="@+id/menuNotifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_notifications" />

    <item
        android:id="@+id/menuServerConfig"
        android:icon="@drawable/ic_server"
        android:title="@string/menu_server_config" />

    <item
        android:id="@+id/menuHelp"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help" />

    <item
        android:id="@+id/menuTerms"
        android:icon="@drawable/ic_terms_document"
        android:title="@string/menu_terms" />

    <item
        android:id="@+id/menuAbout"
        android:icon="@drawable/ic_info"
        android:title="@string/menu_about" />

</menu>
